_sass/jekyll-theme-cayman.scss
@import "normalize";
@import "rouge-github";
@import "variables";
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');

$code-bg-color: #87898b;
$body-bg-color: #cbced3;
$header-bg-color: rgb(7,14,46);
$header-bg-color-secondary: #04020c, rgba(6, 44, 101, 0.9215686275);
;
// Override variables for dark theme
$color-heading-primary: #b5bfc9;
$color-heading-secondary: #c1cdda;
$color-accent: #0366d6;



@mixin large {
  @media screen and (min-width: #{$large-breakpoint}) {
    @content;
  }
}


@mixin medium {
  @media screen and (min-width: #{$medium-breakpoint}) and (max-width: #{$large-breakpoint}) {
    @content;
  }
}

@mixin small {
  @media screen and (max-width: #{$medium-breakpoint}) {
    @content;
  }
}



* {
  box-sizing: border-box;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
   padding: 0;
  margin: 0;
  font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,Abril , Geneva, Verdana, sans-serif;
  font-size: 24px;
  line-height: 1.4;
  color: rgba(255, 255, 255, 0.934);
  background-color: #1f2327;  /* GitHub background color */
}
#welcome-message {
  text-align: center;
}

.centered-content {
  text-align: center;
}

.centered-text {
  text-align: center;
}

#project-name{
  text-align: center;
}

.icon {
  display: inline-block;
  width: 30px; /* Adjust the size as needed */
  height: 30px; /* Adjust the size as needed */
  margin-right: 0.5em; /* Add spacing between the icon and text */
  vertical-align: middle; /* Align the icon vertically with the text */
}

/* Other styles... */


#skip-to-content {
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  top: -10px;

  &:focus {
    position: fixed;
    top: 10px;
    left: 10px;
    height: auto;
    width: auto;
    background: invert($body-link-color);
    outline: thick solid invert($body-link-color);
  }
}


a {
  color: $body-link-color;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}
hr {
  height: 3px; /* Adjust height as needed */
  background: linear-gradient(to right, #ff00cc, #00ffff); /* Replace with your desired colors */
  border: none;
}


.btn {
  font-family:  -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,Abril Fatface,Montserrat;
  display: inline-block;
  margin-bottom: 1rem;
  color: rgba(255, 255, 255, 0.7);
  background-color: transparent;
  border-color: whitesmoke; /* Update the border color */
  border-style: solid;
  border-width: 1px;
  border-radius: 0.3rem;
  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
  padding: auto;

  &:hover {
    color: rgba(255, 255, 255, 0.8);
    text-decoration: none;
    background-color: $header-bg-color;
    border-color: $header-bg-color; 
  }


  + .btn {
    margin-left: 1rem;

  }
  

  @include large {
    padding: 0.75rem 1rem;
  }

  @include medium {
    padding: 0.6rem 0.9rem;
    font-size: 0.9rem;
  }

  @include small {
    display: block;
    width: 100%;
    padding: 0.75rem;
    font-size: 0.9rem;

    + .btn {
      margin-top: 1rem;
      margin-left: 0;
    }
  }
}

.page-header {
  color: $header-heading-color;
  text-align: center;
  background-color: $header-bg-color;
  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);

  .typing-svg-container {
    background: linear-gradient(120deg, #04020c, rgba(6, 44, 101, 0.9215686275), rgb(7, 14, 46));
    display: inline-block;
    padding: 10px;
    border-radius: 10px;
  }
  

  @include large {
    padding: 5rem 6rem;
  }

  @include medium {
    padding: 3rem 4rem;
  }

  @include small {
    padding: 2rem 1rem;
  }
}

.project-name {
  margin-top: 0;
  margin-bottom: 0.1rem;

  @include large {
    font-size: 3.25rem;
  }

  @include medium {
    font-size: 2.25rem;
  }

  @include small {
    font-size: 1.75rem;
  }
}

.project-tagline {
  margin-bottom: 2rem;
  font-weight: normal;
  opacity: 0.7;

  @include large {
    font-size: 1.25rem;
  }

  @include medium {
    font-size: 1.15rem;
  }

  @include small {
    font-size: 1rem;
  }
}

.main-content {
  word-wrap: break-word;

  :first-child {
    margin-top: 0;
  }

  @include large {
    max-width: 64rem;
    padding: 2rem 6rem;
    margin: 0 auto;
    font-size: 1.1rem;
  }

  @include medium {
    padding: 2rem 4rem;
    font-size: 1.1rem;
  }

  @include small {
    padding: 2rem 1rem;
    font-size: 1rem;
  }
  
  kbd {
    background-color: #121313;
    border: 1px solid #171819;
    border-bottom-color: #959da5;
    border-radius: 3px;
    box-shadow: inset 0 -1px 0 #959da5;
    color: #444d56;
    display: inline-block;
    font-size: 11px;
    line-height: 10px;
    padding: 3px 5px;
    vertical-align: middle;
    
  }

  img {
    max-width: 100%;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-top: 2rem;
    margin-bottom: 1rem;
    font-weight: normal;
    color: rgb(231, 233, 235);
  }

  p {
    margin-bottom: 1em;
  }

  code {
    padding: 2px 4px;
    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
    font-size: 0.9rem;
    color: $code-text-color;
    background-color: $code-bg-color;
    border-radius: 0.3rem;
  }

  pre {
    padding: 0.8rem;
    margin-top: 0;
    margin-bottom: 1rem;
    font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
    color: $code-text-color;
    word-wrap: normal;
    background-color: $code-bg-color;
    border: solid 1px $border-color;
    border-radius: 0.3rem;

    > code {
      padding: 0;
      margin: 0;
      font-size: 0.9rem;
      color: $code-text-color;
      word-break: normal;
      white-space: pre;
      background: transparent;
      border: 0;
    }
  }

  .highlight {
    margin-bottom: 1rem;

    pre {
      margin-bottom: 0;
      word-break: normal;
    }
  }

  .highlight pre,
  pre {
    padding: 0.8rem;
    overflow: auto;
    font-size: 0.9rem;
    line-height: 1.45;
    border-radius: 0.3rem;
    -webkit-overflow-scrolling: touch;
  }

  pre code,
  pre tt {
    display: inline;
    max-width: initial;
    padding: 0;
    margin: 0;
    overflow: initial;
    line-height: inherit;
    word-wrap: normal;
    background-color: transparent;
    border: 0;

    &:before,
    &:after {
      content: normal;
    }
  }

  ul,
  ol {
    margin-top: 0;
  }

  blockquote {
    padding: 0 1rem;
    margin-left: 0;
    color: $blockquote-text-color;
    border-left: 0.3rem solid $border-color;

    > :first-child {
      margin-top: 0;
    }

    > :last-child {
      margin-bottom: 0;
    }
  }

  table {
    display: block;
    width: 100%;
    overflow: auto;
    word-break: normal;
    word-break: keep-all; // For Firefox to horizontally scroll wider tables.
    -webkit-overflow-scrolling: touch;

    th {
      font-weight: bold;
    }

    th,
    td {
      padding: 0.5rem 1rem;
      border: 1px solid $table-border-color;
    }
  }

  dl {
    padding: 0;

    dt {
      padding: 0;
      margin-top: 1rem;
      font-size: 1rem;
      font-weight: bold;
    }

    dd {
      padding: 0;
      margin-bottom: 1rem;
    }
  }

 
}

.site-footer {
  padding-top: 2rem;
  margin-top: 2rem;

  @include large {
    font-size: 1rem;
  }

  @include medium {
    font-size: 1rem;
  }

  @include small {
    font-size: 0.9rem;
  }
}

.site-footer-owner {
  display: block;
  font-weight: bold;
}

.site-footer-credits {
  color: $blockquote-text-color;
}


.navigation {
  background-color: transparent; /* Set the background color */
}

.navigation-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.navigation-item {
  display: inline-block;
  margin-right: 1rem; /* Add spacing between navigation items */
}

.navigation-link {
  color: $color-heading-primary; /* Set the link color */
  text-decoration: none;
  padding: 0.5rem;
  
  &:hover {
    color: $color-heading-secondary; /* Set the link color on hover */
    background-color: #121313;
  }
}

.navigation-link,
a {
  color: #d3d2dd;
 
  display: inline-block;
  padding: 2px;
  border: 1px solid transparent; /* Add a transparent border */
  border-radius: 10px;
  transition: all 0.2s; /* Apply transition to all properties */
  font-family: Abril Fatface;
  font-size: 20px;
  $code-bg-color: #87898b;
$body-bg-color: #cbced3;
$header-bg-color: #222427eb;
$header-bg-color-secondary: #949cad;
// Override variables for dark theme
$color-heading-primary: #b5bfc9;
$color-heading-secondary: #c1cdda;
$color-accent: #919aa4;

  &:hover {
    color: #919aa8;
    border-color: #9196a3;
    background-color: #6b6f75eb;
    transition: all;
    
    
  }
}

      /* Add your custom CSS styles here */

      /* Adjustments for mobile devices */
      @media (max-width: 480px) {

        p{
          text-align: left;
          font-size: bold;
        }
        
        h2 {
          font-size: 20px;
          display: flex;
          align-items: center;
        }
      
        h2 img {
          height: 40px;
          width: 100%;
          margin-right: 10px;
          border-radius: 10px;
          float: left;
        }
      
        h2 strong {
          display: inline-block;
          margin-top: 1px;
          font-size: 20px;
        }
        h2 {
          font-size: 20px;
          display: flex;
        }
      
        h2 img {
          height: 70px;
          width: 70px;
         
          border-radius: 10px;
          float: left;
        }
      
        h2 strong {
          display: inline-block;
          margin-top: 1px;
          font-size: 20px;
        }
        strong img{
          text-align: center;
        }
      }

